# hashmap

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/hashmap/: macros.h  map.h
src/: main.c  map.c
src/include/: map.h
tests/: CMakeLists.txt  Makefile  run.sh
tests/include/perlmap/: map.h
tests/src/: list.c  main.c  test_with_structs.c  utils.c
tests/src/include/: colors.h  list.h  test_with_structs.h  utils.h
